--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -4,5 +4,5 @@
 <title>
 <body>
 <h1>Estelle Kerby Design consulting</h1>
-<p>We provide Design consulting, brand management and freelance design services</p>
+<p>We provide Design consulting, brand management and freelance design services!!</p>
 </body>
