--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head><link rel="stylesheet" type="text/css" href="css/style.css">
+<head>
+<link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
 <title>
+</title>
 <body>
 <h1>Estelle Kerby Design consulting</h1>
 <p>We provide Design consulting, brand management and freelance design services!!</p>
 </body>
+</html>
