--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -6,7 +6,7 @@
 <title>
 </title>
 <body>
-<h1>Estelle Kerby Design consulting</h1>
-<p>We provide Design consulting, brand management and freelance design services!!</p>
+<h1>Estelle Kerby Design Consulting</h1>
+<p>We provide design consulting, brand management and freelance design services to companies looking to elevate their look, feel and customer experience.</p>
 </body>
 </html>
