Adjusting HTML layout

--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head><link rel="stylesheet" type="text/css" href="CSS/style.css"></head>
+<head>
+<link rel="stylesheet" type="text/css" href="CSS/style.css">
+</head>
 <title>
 </title>
 <body>
-<h1>Estelle Kerby Design Consulting</h1>
-<p>We provide design consulting, brand management and freelance design services to companies looking to elevate their look, feel and customer experience.</p>
+<h1>
+Estelle Kerby Design Consulting
+</h1>
+<p>
+We provide design consulting, brand management and freelance design services to companies looking to elevate their look, feel and customer experience.
+</p>
 </body>
-
 </html>
