--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -11,7 +11,7 @@ Estelle Kerby Design Consulting
 </h1>
 <p>
 Design Branding - Connecting People to Products
-<img src="/estelle-banner.jpg">
+<img src="estelle-banner.jpg">
 
 I am a professional and dynamic designer with wide and varied international experiece in product design and branding. My experience combined with a solid eductaion have ensured that I have gained a broad set of design and management skills. 
 
