Adding DIV elements

--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -10,7 +10,7 @@
 Estelle Kerby 
 </h1>
 
-<h2>Home Work About Contatc
+<h2>Home Work About Contact
 </h2>
 
 <h3>
@@ -18,10 +18,10 @@ Estelle Kerby
 </h3>
 
 <p1>
-
 <img src="images/estelle_banner.jpg">
 </p1>
 
+<div>
 <p2>
 I am a professional and dynamic designer with wide and varied international experiece in product design and branding. My experience combined with a solid eductaion have ensured that I have gained a broad set of design and management skills. 
 Creative and innovating design
@@ -35,29 +35,33 @@ Proble solving and team worker
 target="_top">Send Mail</a>
 
 </p2>
+</div>
 
-<h4>WORK
+
+<h4> WORK
 </h4>
 
-<h5>SERVICES
+<h5> SERVICES
 </h5>
 
 <h6>
-Strategy
-Brand consultancy
-Website 
-Product design
-Photoshoot
-Graphic design
-Logo design 
-Other
+Strategy_
+Brand consultancy_
+Website_
+Product design_
+Photoshoot_
+Graphic design_
+Logo design_
+Other_
 </h6>
 
-<h7>BRANDS
+<h7> BRANDS
 </h7>
 
-<h8>A
+<div>
+<h8> A B C D E 
 </h8>
+</div>
 
 </body>
 
