--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -23,7 +23,7 @@ Estelle Kerby
 
 <div>
 <p2>
-I am a professional and dynamic designer with wide and varied international experiece in product design and branding. My experience combined with a solid eductaion have ensured that I have gained a broad set of design and management skills. 
+I am a professional and dynamic <span>designer</span> with wide and varied international experiece in product design and branding. My experience combined with a solid eductaion have ensured that I have gained a broad set of design and management skills. 
 Creative and innovating design
 Management skills
 Dynamic and capacity to react un der pressure
@@ -45,14 +45,14 @@ target="_top">Send Mail</a>
 </h5>
 
 <h6>
-Strategy_
+<span>Strategy_
 Brand consultancy_
 Website_
 Product design_
 Photoshoot_
 Graphic design_
 Logo design_
-Other_
+Other_</span>
 </h6>
 
 <h7> BRANDS
