--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -6,24 +6,31 @@
 <title>
 </title>
 <body>
-<h1>
+<h1 class="name">
 Estelle Kerby 
 </h1>
 
-<h2>Home Work About Contatc
-</h2>
+<nav>
+	<h2 class="links">
+		<a href="work.html">Work</a>
+		<a href="home.html">Home</a>
+		<a href="about.html">About</a>
+		<a href="contact.html">Contact</a>
+	</h2>
+</nav>
 
+<section>
 <h3>
 "I Connect people to products with design and branding"
 </h3>
+</section>
 
-<p1>
+<section class="hero">
+</section>
 
-<img src="images/estelle_banner.jpg">
-</p1>
-
-<p2>
-I am a professional and dynamic designer with wide and varied international experiece in product design and branding. My experience combined with a solid eductaion have ensured that I have gained a broad set of design and management skills. 
+<div>
+<p class="info">
+I am a professional and dynamic <span>designer</span> with wide and varied international experiece in product design and branding. My experience combined with a solid eductaion have ensured that I have gained a broad set of design and management skills. 
 Creative and innovating design
 Management skills
 Dynamic and capacity to react un der pressure
@@ -34,30 +41,95 @@ Proble solving and team worker
 <a href="mailto:estelle.rigoudy@gmail.com"
 target="_top">Send Mail</a>
 
-</p2>
+</p>
+</div>
 
-<h4>WORK
+<section>
+<h4> WORK
 </h4>
+</section>
 
-<h5>SERVICES
-</h5>
 
+<section>
+	<h5> SERVICES</h5>
+
+	<div class="row">
+		<div class="services">
+			<img src="strategy.jpg">
+		</div>
+		<div class="services">
+			<img src="branding.jpg">
+		</div>
+		<div class="services">
+			<img src="web design.jpg">
+		</div>
+		<div class="services">
+			<img src="photoshoot.jpg">
+		</div>
+		<div class="services">
+			<img src="graphic design.jpg">
+		</div>
+		<div class="services">
+			<img src="logo design.jpg">
+		</div>
+		<div class="services">
+			<img src="product design.jpg">
+		</div>
+		<div class="services">
+			<img src="photography.jpg">
+		</div>
+	</div>
+</section>
+
+<section>
 <h6>
-Strategy
-Brand consultancy
-Website 
-Product design
-Photoshoot
-Graphic design
-Logo design 
-Other
+<span>Strategy_
+Brand consultancy_
+Website_
+Product design_
+Photoshoot_
+Graphic design_
+Logo design_
+Other_</span>
 </h6>
+</section>
 
-<h7>BRANDS
-</h7>
 
-<h8>A
-</h8>
+<section>
+	<h7> BRANDS</h7>
+	<div class="logo-container">
+		<img src="Images/estelle_banner.jpg">
+		<h4>lorem ipsum</h4>
+	</div>
+	<div class="logo-container">
+		<img src="Images/estelle_banner.jpg">
+		<h4>lorem ipsum</h4>
+	</div>
+	<div class="logo-container">
+		<img src="Images/estelle_banner.jpg">
+		<h4>lorem ipsum</h4>
+	</div>
+	<div class="logo-container">
+		<img src="Images/estelle_banner.jpg">
+		<h4>lorem ipsum</h4>
+	</div>
+	<div class="logo-container">
+		<img src="Images/estelle_banner.jpg">
+		<h4>lorem ipsum</h4>
+	</div>
+	<div class="logo-container">
+		<img src="Images/estelle_banner.jpg">
+		<h4>lorem ipsum</h4>
+	</div>
+	<div class="logo-container">
+		<img src="Images/estelle_banner.jpg">
+		<h4>lorem ipsum</h4>
+	</div>
+	<div class="logo-container">
+		<img src="Images/estelle_banner.jpg">
+		<h4>lorem ipsum</h4>
+	</div>
+</section>
 
 </body>
 
