--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -40,7 +40,7 @@ Proble solving and team worker
 "contact me:"
 <a href="mailto:estelle.rigoudy@gmail.com"
 target="_top">Send Mail</a>
-
+	
 </p>
 </div>
 
@@ -55,7 +55,7 @@ target="_top">Send Mail</a>
 
 	<div class="row">
 		<div class="services">
-			<img src="strategy.jpg">
+			<img src="services-01.jpg">
 		</div>
 		<div class="services">
 			<img src="branding.jpg">
@@ -99,35 +99,33 @@ Other_</span>
 	<h7> BRANDS</h7>
 	<div class="logo-container">
 		<img src="Images/estelle_banner.jpg">
-		<h4>lorem ipsum</h4>
+		<h4>lorem</h4>
 	</div>
 	<div class="logo-container">
 		<img src="Images/estelle_banner.jpg">
-		<h4>lorem ipsum</h4>
+		<h4>lorem</h4>
 	</div>
 	<div class="logo-container">
 		<img src="Images/estelle_banner.jpg">
-		<h4>lorem ipsum</h4>
+		<h4>lorem</h4>
 	</div>
 	<div class="logo-container">
 		<img src="Images/estelle_banner.jpg">
-		<h4>lorem ipsum</h4>
+		<h4>lorem</h4>
 	</div>
 	<div class="logo-container">
 		<img src="Images/estelle_banner.jpg">
-		<h4>lorem ipsum</h4>
+		<h4>lorem</h4>
 	</div>
 	<div class="logo-container">
 		<img src="Images/estelle_banner.jpg">
-		<h4>lorem ipsum</h4>
+		<h4>lorem</h4>
 	</div>
 	<div class="logo-container">
 		<img src="Images/estelle_banner.jpg">
-		<h4>lorem ipsum</h4>
+		<h4>lorem</h4>
 	</div>
-	<div class="logo-container">
-		<img src="Images/estelle_banner.jpg">
-		<h4>lorem ipsum</h4>
+	
 	</div>
 </section>
 
