Uploading Services images+update banner image

--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -30,13 +30,18 @@ Estelle Kerby
 
 <div>
 <p class="info">
-I am a professional and dynamic <span>designer</span> with wide and varied international experiece in product design and branding. My experience combined with a solid eductaion have ensured that I have gained a broad set of design and management skills. 
-Creative and innovating design
-Management skills
-Dynamic and capacity to react un der pressure
-leadership and communication
-Proble solving and team worker
+I am a professional and dynamic <span>designer</span> with wide and varied international experiece in product design and branding. My experience combined with a solid eductaion have ensured that I have gained a broad set of design and management skills.
+</p>
 
+<ul> 
+<li>Creative and innovating design</li>
+<li>Management skills</li>
+<li>Dynamic and capacity to react un der pressure</li>
+<li>leadership and communication</li>
+<li>Proble solving and team worker</li>
+</ul>
+
+<p>
 "contact me:"
 <a href="mailto:estelle.rigoudy@gmail.com"
 target="_top">Send Mail</a>
@@ -53,45 +58,17 @@ target="_top">Send Mail</a>
 <section>
 	<h5> SERVICES</h5>
 
-	<div class="row">
-		<div class="services">
-			<img src="services-01.jpg">
-		</div>
-		<div class="services">
-			<img src="branding.jpg">
-		</div>
-		<div class="services">
-			<img src="web design.jpg">
-		</div>
-		<div class="services">
-			<img src="photoshoot.jpg">
-		</div>
-		<div class="services">
-			<img src="graphic design.jpg">
-		</div>
-		<div class="services">
-			<img src="logo design.jpg">
-		</div>
-		<div class="services">
-			<img src="product design.jpg">
-		</div>
-		<div class="services">
-			<img src="photography.jpg">
+	<div class="row clearfix">
+			<img src="Images/Services-01.jpg" class="services">
+			<img src="Images/Services-02.jpg" class="services">
+			<img src="Images/Services-03.jpg" class="services">
+			<img src="Images/Services-04.jpg" class="services">
+			<img src="Images/Services-05.jpg" class="services">
+			<img src="Images/Services-06.jpg" class="services">
+			<img src="Images/Services-07.jpg" class="services">
+			<img src="Images/Services-08.jpg" class="services">
 		</div>
 	</div>
-</section>
-
-<section>
-<h6>
-<span>Strategy_
-Brand consultancy_
-Website_
-Product design_
-Photoshoot_
-Graphic design_
-Logo design_
-Other_</span>
-</h6>
 </section>
 
 
