Adding brand logo

--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -73,36 +73,20 @@ target="_top">Send Mail</a>
 
 
 <section>
-	<h7> BRANDS</h7>
-	<div class="logo-container">
-		<img src="Images/estelle_banner.jpg">
-		<h4>lorem</h4>
-	</div>
-	<div class="logo-container">
-		<img src="Images/estelle_banner.jpg">
-		<h4>lorem</h4>
-	</div>
-	<div class="logo-container">
-		<img src="Images/estelle_banner.jpg">
-		<h4>lorem</h4>
-	</div>
-	<div class="logo-container">
-		<img src="Images/estelle_banner.jpg">
-		<h4>lorem</h4>
-	</div>
-	<div class="logo-container">
-		<img src="Images/estelle_banner.jpg">
-		<h4>lorem</h4>
-	</div>
-	<div class="logo-container">
-		<img src="Images/estelle_banner.jpg">
-		<h4>lorem</h4>
-	</div>
-	<div class="logo-container">
-		<img src="Images/estelle_banner.jpg">
-		<h4>lorem</h4>
-	</div>
-	
+	<h7>BRANDS</h7>
+
+	<div class="row clearfix">
+	<img src="Images/logo1.jpg" class="BRANDS">
+	<img src="Images/logo1.jpg" class="BRANDS">
+	<img src="Images/logo1.jpg" class="BRANDS">
+	<img src="Images/logo1.jpg" class="BRANDS">
+	<img src="Images/logo1.jpg" class="BRANDS">
+	<img src="Images/logo1.jpg" class="BRANDS">
+	<img src="Images/logo1.jpg" class="BRANDS">
+	<img src="Images/logo1.jpg" class="BRANDS">
+	<img src="Images/logo1.jpg" class="BRANDS">
+	<img src="Images/logo1.jpg" class="BRANDS">
+		</div>
 	</div>
 </section>
 
