--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -26,12 +26,15 @@ Estelle Kerby
 </section>
 
 <section class="hero">
+<h1>
+Estelle kerby </h1>
 </section>
 
 <div>
 <p class="info">
 I am a professional and dynamic <span>designer</span> with wide and varied international experiece in product design and branding. My experience combined with a solid eductaion have ensured that I have gained a broad set of design and management skills.
 </p>
+
 
 <ul> 
 <li>Creative and innovating design</li>
@@ -50,8 +53,22 @@ target="_top">Send Mail</a>
 </div>
 
 <section>
-<h4> WORK
-</h4>
+	<h4>WORK</h4>
+
+	<div class="row clearfix">
+		<a href="work.html#drop">
+			<img src="Images/Services-01.jpg" class="WORK">
+		</a>
+		<img src="images/work_project/">
+		<img src="Images/Services-02.jpg" class="WORK">
+		<img src="Images/Services-03.jpg" class="WORK">
+		<img src="Images/Services-04.jpg" class="WORK">
+		<img src="Images/Services-05.jpg" class="WORK">
+		<img src="Images/Services-06.jpg" class="WORK">
+		<img src="Images/Services-07.jpg" class="WORK">
+		<img src="Images/Services-08.jpg" class="WORK">
+		</div>
+	</div>
 </section>
 
 
@@ -89,6 +106,8 @@ target="_top">Send Mail</a>
 		</div>
 	</div>
 </section>
+
+<
 
 </body>
 
