--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -105,7 +105,22 @@ target="_top">Send Mail</a>
 	</div>
 </section>
 
-<
+<section id="two_column" class="clearfix">
+    <aside id="left">
+        <p>TELL US ABOUT YOUR NEW PROJECT<p>
+        <p>WE WOULD LOVE TO HEAR FROM YOU</p>
+    </aside>
+
+    <article id="right">
+        <p>CONTACT</p>
+contact me:
+<a href="mailto:estelle.rigoudy@gmail.com"
+target="_top">Send me an email</a>
+<section>
+Phone: +852 
+</section>
+    </article>
+</section>
 
 </body>
 
