--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -27,7 +27,7 @@ Estelle Kerby
 
 <section class="hero">
 <h1>
-Estelle kerby </h1>
+Design Agency </h1>
 </section>
 
 <div>
@@ -117,8 +117,7 @@ contact me:
 <a href="mailto:estelle.rigoudy@gmail.com"
 target="_top">Send me an email</a>
 <section>
-Phone: +852 
-</section>
+Phone: +852 </section> 
     </article>
 </section>
 
