Create unit 8 folder

--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -44,7 +44,7 @@ I am a professional and dynamic <span>designer</span> with wide and varied inter
 <li>Proble solving and team worker</li>
 </ul>
 
-<p>
+<p class="contact>
 "contact me:"
 <a href="mailto:estelle.rigoudy@gmail.com"
 target="_top">Send Mail</a>
