--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -19,6 +19,18 @@ Estelle Kerby
 	</h2>
 </nav>
 
+
+<div class="manual">
+<ul class="links">
+		<li><a href="work.html">Work</a></li>
+		<li><a href="home.html">Home</a></li>
+		<li><a href="about.html">About</a></li>
+		<li><a href="contact.html">Contact</a></li>
+</ul>
+</div>
+
+ 
+
 <section>
 <h3>
 "I Connect people to products with design and branding"
@@ -31,10 +43,11 @@ Design Agency </h1>
 </section>
 
 <div>
+<div class="textBlock">
 <p class="info">
 I am a professional and dynamic <span>designer</span> with wide and varied international experiece in product design and branding. My experience combined with a solid eductaion have ensured that I have gained a broad set of design and management skills.
 </p>
-
+</div>
 
 <ul> 
 <li>Creative and innovating design</li>
